# xrdcpapmonplugin

./: Makefile.am  XrdCpapMon.cc  bootstrap.sh  cleanup  configure.ac  xrdcpapmonplugin.spec
